--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -415,120 +415,127 @@
             <%= render partial: "preview", locals: { resume: @resume, show_job_match: true } %>
           </div>
           <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
+            <a href="/resumes/<%= @resume.id %>/prepare_interviews" class="text-sm font-semibold leading-6 text-gray-900">准备面试</a>
             <button type="button" data-action="resume#downloadPDF" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">下载简历</button>
           </div>
         </div>
       </div>
     </div>
   <% elsif current_step == 'prepare_interviews' %>
-    <div class="grid grid-cols-1 gap-x-8 gap-y-8 md:grid-cols-3">
-      <div class="px-4 sm:px-0">
-        <h2 class="text-base font-semibold leading-7 text-gray-900">职位信息</h2>
-        <p class="mt-1 text-sm leading-6 text-gray-600">请填写目标职位的公司背景信息和职位的 JD 内容</p>
-      </div>
-
-      <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
-        <div class="px-4 py-6 sm:p-8">
-          <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="col-span-full">
-              <div class="border-b border-gray-200 pb-5 my-4">
-                <h3 class="text-base font-semibold leading-6 text-gray-900">职位信息</h3>
-              </div>
-              <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">公司介绍</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-              </div>
-            </div>
-            <div class="col-span-full">
-              <label for="job-description" class="block text-sm font-medium leading-6 text-gray-900">JD 内容</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="job-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-              </div>
-            </div>
-          </div>
+    <div data-controller="interview" data-interview-id="<%= @resume.id %>">
+      <div class="grid grid-cols-1 gap-x-8 gap-y-8 md:grid-cols-3">
+        <div class="px-4 sm:px-0">
+          <h2 class="text-base font-semibold leading-7 text-gray-900">职位信息</h2>
+          <p class="mt-1 text-sm leading-6 text-gray-600">若填写公司信息和职位的 JD ，你会获得汪汪的定制内容，更有机会通过面试！</p>
         </div>
-      </form>
-    </div>
-    <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
-      <div class="px-4 sm:px-0">
-        <h2 class="text-base font-semibold leading-7 text-gray-900">自我介绍</h2>
-        <p class="mt-1 text-sm leading-6 text-gray-600">根据公司和职位信息定制化自我介绍</p>
-      </div>
 
-      <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
-        <div class="px-4 py-6 sm:p-8">
-          <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="col-span-full">
-              <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">自我介绍</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+        <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+          <div class="px-4 py-6 sm:p-8">
+            <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="col-span-full">
+                <div class="border-b border-gray-200 pb-5 my-4">
+                  <h3 class="text-base font-semibold leading-6 text-gray-900">目标职位</h3>
+                </div>
+                <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">公司介绍</label>
+                <div class="mt-2">
+                  <textarea rows="8" name="job-description" id="company-description" data-interview-target="companyDescription" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                </div>
+              </div>
+              <div class="col-span-full">
+                <label for="job-description" class="block text-sm font-medium leading-6 text-gray-900">JD 内容</label>
+                <div class="mt-2">
+                  <textarea rows="8" name="job-description" id="job-description" data-interview-target="jobDescription" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-          <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">生成</button>
-        </div>
-      </form>
-    </div>
-    <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
-      <div class="px-4 sm:px-0">
-        <h2 class="text-base font-semibold leading-7 text-gray-900">模拟面试问题</h2>
-        <p class="mt-1 text-sm leading-6 text-gray-600">根据职位信息和你的简历生成模拟面试问题清单</p>
       </div>
+      <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
+        <div class="px-4 sm:px-0">
+          <h2 class="text-base font-semibold leading-7 text-gray-900">自我介绍</h2>
+          <p class="mt-1 text-sm leading-6 text-gray-600">根据公司和职位信息定制化自我介绍</p>
+        </div>
 
-      <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
-        <div class="px-4 py-6 sm:p-8">
-          <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="col-span-full">
-              <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">产品专业领域</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-              </div>
-            </div>
-
-            <div class="col-span-full">
-              <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">价值观领域</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+        <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+          <div class="px-4 py-6 sm:p-8">
+            <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="col-span-full">
+                <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">自我介绍</label>
+                <div class="mt-2">
+                  <div data-interview-target="selfIntroductionResponse" class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 whitespace-pre-wrap">
+                    <p class="text-gray-500">自我介绍将显示在这里</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+          <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
+            <button data-action="click->interview#selfIntroduction" data-interview-target="selfIntroductionButton" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">生成</button>
+          </div>
+        </form>
+      </div>
+      <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
+        <div class="px-4 sm:px-0">
+          <h2 class="text-base font-semibold leading-7 text-gray-900">模拟面试问题</h2>
+          <p class="mt-1 text-sm leading-6 text-gray-600">根据职位信息和你的简历生成模拟面试问题清单</p>
         </div>
-        <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-          <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">生成</button>
-        </div>
-      </form>
-    </div>
 
-    <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
-      <div class="px-4 sm:px-0">
-        <h2 class="text-base font-semibold leading-7 text-gray-900">面试问题分析</h2>
-        <p class="mt-1 text-sm leading-6 text-gray-600">面试结束后，分析面试官的问题总结面试经验</p>
+        <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+          <div class="px-4 py-6 sm:p-8">
+            <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="col-span-full">
+                <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">产品专业领域</label>
+                <div class="mt-2">
+                  <div data-interview-target="potentialInterviewQuestionsResponse" class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 whitespace-pre-wrap">
+                    <p class="text-gray-500">模拟面试问题列表将显示在这里</p>
+                  </div>
+                </div>
+              </div>
+
+<!--              <div class="col-span-full">-->
+<!--                <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">价值观领域</label>-->
+<!--                <div class="mt-2">-->
+<!--                  <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>-->
+<!--                </div>-->
+<!--              </div>-->
+            </div>
+          </div>
+          <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
+            <button data-action="click->interview#potentialInterviewQuestions" data-interview-target="potentialInterviewQuestionsButton" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">生成</button>
+          </div>
+        </form>
       </div>
 
-      <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
-        <div class="px-4 py-6 sm:p-8">
-          <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="col-span-full">
-              <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">面试官问题</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-              </div>
-            </div>
+      <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
+        <div class="px-4 sm:px-0">
+          <h2 class="text-base font-semibold leading-7 text-gray-900">面试问题分析</h2>
+          <p class="mt-1 text-sm leading-6 text-gray-600">面试结束后，分析面试官的问题总结面试经验</p>
+        </div>
 
-            <div class="col-span-full">
-              <label for="company-description" class="block text-sm font-medium leading-6 text-gray-900">问题分析</label>
-              <div class="mt-2">
-                <textarea rows="8" name="job-description" id="company-description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+        <form class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
+          <div class="px-4 py-6 sm:p-8">
+            <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="col-span-full">
+                <label for="interview-questions" class="block text-sm font-medium leading-6 text-gray-900">面试官问题</label>
+                <div class="mt-2">
+                  <textarea rows="8" name="interview-questions" id="interview-questions" data-interview-target="interviewQuestions" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                </div>
+              </div>
+
+              <div class="col-span-full">
+                <label for="interview-questions-analysis" class="block text-sm font-medium leading-6 text-gray-900">问题分析</label>
+                <div data-interview-target="interviewQuestionsAnalysisResponse" class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 whitespace-pre-wrap">
+                  <p class="text-gray-500">面试分析将显示在这里</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-          <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">生成</button>
-        </div>
-      </form>
+          <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
+            <button data-action="click->interview#analyzeInterviewQuestions" data-interview-target="analysisButton" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">分析</button>
+          </div>
+        </form>
+      </div>
     </div>
   <% end %>
 </div>
