chore(interview): handle response error

--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -526,7 +526,7 @@
               <div class="col-span-full">
                 <label for="interview-questions-analysis" class="block text-sm font-medium leading-6 text-gray-900">问题分析</label>
                 <div data-interview-target="interviewQuestionsAnalysisResponse" class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 whitespace-pre-wrap">
-                  <p class="text-gray-500">面试分析将显示在这里</p>
+                  <p class="text-gray-500">分析结果将显示在这里</p>
                 </div>
               </div>
             </div>
