--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -232,27 +232,27 @@
             <!-- Prompt message input -->
             <form class="mt-2" data-action="thinking-models#submit">
               <div class="mb-2 flex gap-x-2 overflow-x-auto whitespace-nowrap text-xs text-slate-600 dark:text-slate-300 sm:text-sm">
-                <div class="flex items-center space-x-4"> <!-- 使用 flex 布局和 space-x-4 为每个选项提供间距 -->
+                <div class="flex items-center space-x-4">
                   <div>
-                    <input type="checkbox" id="switch-to-user-view" value="switch-to-user-view" class="hidden peer" data-thinking-models-target="model">
+                    <input type="checkbox" id="switch-to-user-view" value="切换至用户视角分析问题" class="hidden peer" data-thinking-models-target="model">
                     <label for="switch-to-user-view" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
                       切换至用户视角
                     </label>
                   </div>
                   <div>
-                    <input type="checkbox" id="kano-model" value="kano" class="hidden peer" data-thinking-models-target="model">
+                    <input type="checkbox" id="kano-model" value="卡诺模型" class="hidden peer" data-thinking-models-target="model">
                     <label for="kano-model" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
                       卡诺模型分析
                     </label>
                   </div>
                   <div>
-                    <input type="checkbox" id="mvp-judgment" value="mvp" class="hidden peer" data-thinking-models-target="model">
+                    <input type="checkbox" id="mvp-judgment" value="判断 MVP 功能" class="hidden peer" data-thinking-models-target="model">
                     <label for="mvp-judgment" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
                       MVP 功能判断
                     </label>
                   </div>
                   <div>
-                    <input type="checkbox" id="pmf-path" value="pmf" class="hidden peer" data-thinking-models-target="model">
+                    <input type="checkbox" id="pmf-path" value="寻找 PMF 思路" class="hidden peer" data-thinking-models-target="model">
                     <label for="pmf-path" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
                       寻找 PMF 思路
                     </label>
