--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -184,6 +184,7 @@
                 <button
                   type="submit"
                   class="rounded-lg border border-transparent bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300"
+                  data-thinking-models-target="submitButton"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
