--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -371,36 +371,36 @@
         <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
           <div class="px-4 py-6 sm:p-8">
             <div class="border-b border-gray-200 pb-5 my-4">
-              <h3 class="text-base font-semibold leading-6 text-gray-900">职位匹配生成</h3>
+              <h3 class="text-base font-semibold leading-6 text-gray-900">请输入岗位名称、职责、要求等内容，我们会为您量身打造适合该职位的自我介绍</h3>
             </div>
             <!-- job descriptions -->
             <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-4">
               <div class="sm:col-span-6">
-                <label for="job-description" class="block text-sm font-medium leading-6 text-gray-900">职位 JD 内容</label>
+                <label for="job-description" class="block text-sm font-medium leading-6 text-gray-900">请输入岗位名称、职责、要求</label>
                 <div class="mt-2">
                   <textarea rows="16" name="job-description" id="job-description" data-resume-target="jobDescription" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                 </div>
               </div>
             </div>
             <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-4">
-              <div class="sm:col-span-6">
-                <label for="job-match" class="block text-sm font-medium leading-6 text-gray-900">职位匹配</label>
+              <div class="sm:col-span-6 relative">
+                <label for="job-match" class="block text-sm font-medium leading-6 text-gray-900">与该职位匹配的自我介绍</label>
                 <div class="mt-2 h-64">
                   <div id="job-match-editor"></div>
                   <textarea rows="8" name="job-match" id="job-match" data-resume-target="jobMatch" class="hidden block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                 </div>
+                <button
+                  type="button"
+                  data-action="click->resume#generateJobMatch"
+                  data-resume-target="jobMatchButton"
+                  class="absolute right-2 rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                >
+                  生成
+                </button>
               </div>
             </div>
           </div>
           <div class="mt-6 flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-            <button
-              type="button"
-              data-action="click->resume#generateJobMatch"
-              data-resume-target="jobMatchButton"
-              class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-            >
-              生成职位匹配
-            </button>
           </div>
         </div>
       </div>
