chore(switchview): update title

--- a/app/views/chat/switch_view.html.erb
+++ b/app/views/chat/switch_view.html.erb
@@ -18,7 +18,7 @@
             <div class="space-y-12">
               <div class="border-b border-gray-900/10 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900">用户视角分析</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600">汪汪会帮助你站在用户视角分析你的产品想法</p>
+                <p class="mt-1 text-sm leading-6 text-gray-600">汪汪会帮助妈妈站在用户视角分析你的产品想法</p>
 
                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                   <div class="col-span-full">
