chore(switch view): save target user to the local storage

--- a/app/views/chat/switch_view.html.erb
+++ b/app/views/chat/switch_view.html.erb
@@ -32,7 +32,15 @@
                   <div class="col-span-full">
                     <label for="target-user" class="block text-sm font-medium leading-6 text-gray-900">目标用户</label>
                     <div class="mt-2">
-                      <textarea data-switch-view-target="targetUser" required id="target-user" name="target-user" rows="2" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea
+                        data-switch-view-target="targetUser"
+                        data-action="switch-view#saveTargetUser"
+                        required
+                        id="target-user"
+                        name="target-user"
+                        rows="2"
+                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                      ></textarea>
                     </div>
                     <p class="mt-3 text-sm leading-6 text-gray-600">妈妈的产品是为谁服务的呢？</p>
                   </div>
