feat(five whys): implement the backend logic and interactions

--- a/app/views/chat/five_whys.html.erb
+++ b/app/views/chat/five_whys.html.erb
@@ -20,14 +20,6 @@
               <div class="overflow-hidden rounded-full bg-gray-200">
                 <div class="h-2 rounded-full bg-indigo-600" style="width: 16.6%" data-five-whys-target="progressBar"></div>
               </div>
-<!--              <div class="mt-6 hidden grid-cols-6 text-sm font-medium text-gray-600 sm:grid">-->
-<!--                <div class="text-indigo-600">Who</div>-->
-<!--                <div class="text-center">What</div>-->
-<!--                <div class="text-center">When</div>-->
-<!--                <div class="text-center">Where</div>-->
-<!--                <div class="text-center">Why</div>-->
-<!--                <div class="text-right">How</div>-->
-<!--              </div>-->
             </div>
           </div>
 
@@ -43,9 +35,9 @@
                   <div class="col-span-full">
                     <label for="who" class="block text-sm font-medium leading-6 text-gray-900 hidden">Who</label>
                     <div class="mt-2">
-                      <textarea required id="who" name="who" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea required data-five-whys-target="textarea" id="who" name="who" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                     </div>
-                    <p class="mt-3 text-sm leading-6 text-gray-600">列出可能涉及的各种用户角色和团队成员。</p>
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600">列出可能涉及的各种用户角色和团队成员。</p>
                   </div>
                 </div>
               </div>
@@ -60,9 +52,9 @@
                   <div class="col-span-full">
                     <label for="who" class="block text-sm font-medium leading-6 text-gray-900 hidden">What</label>
                     <div class="mt-2">
-                      <textarea disabled id="who" name="who" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea data-five-whys-target="textarea" id="who" name="who" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                     </div>
-                    <p class="mt-3 text-sm leading-6 text-gray-600">提供指导问题来帮助用户描述产品或任务的核心元素。</p>
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600"></p>
                   </div>
                 </div>
               </div>
@@ -77,9 +69,9 @@
                   <div class="col-span-full">
                     <label for="when" class="block text-sm font-medium leading-6 text-gray-900 hidden">When</label>
                     <div class="mt-2">
-                      <textarea disabled id="when" name="when" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea data-five-whys-target="textarea" id="when" name="when" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                     </div>
-                    <p class="mt-3 text-sm leading-6 text-gray-600">询问产品或特性预计的实施时间，以及时间对用户影响的考量。</p>
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600"></p>
                   </div>
                 </div>
               </div>
@@ -94,9 +86,9 @@
                   <div class="col-span-full">
                     <label for="where" class="block text-sm font-medium leading-6 text-gray-900 hidden">Where</label>
                     <div class="mt-2">
-                      <textarea disabled id="where" name="where" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea data-five-whys-target="textarea" id="where" name="where" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                     </div>
-                    <p class="mt-3 text-sm leading-6 text-gray-600">探讨产品设计需要适应的不同环境和市场条件。</p>
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600"></p>
                   </div>
                 </div>
               </div>
@@ -111,9 +103,9 @@
                   <div class="col-span-full">
                     <label for="why" class="block text-sm font-medium leading-6 text-gray-900 hidden">Why</label>
                     <div class="mt-2">
-                      <textarea disabled id="why" name="why" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea data-five-whys-target="textarea" id="why" name="why" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                     </div>
-                    <p class="mt-3 text-sm leading-6 text-gray-600">挖掘产品解决的用户痛点和业务需求。</p>
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600"></p>
                   </div>
                 </div>
               </div>
@@ -128,17 +120,30 @@
                   <div class="col-span-full">
                     <label for="why" class="block text-sm font-medium leading-6 text-gray-900 hidden">Why</label>
                     <div class="mt-2">
-                      <textarea disabled id="why" name="why" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <textarea data-five-whys-target="textarea" id="why" name="why" rows="6" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                     </div>
-                    <p class="mt-3 text-sm leading-6 text-gray-600">引导用户思考实现方法、技术路径或实施步骤。</p>
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600"></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 pb-12 md:grid-cols-3 cursor-not-allowed opacity-50" data-five-whys-target="step" data-five-whys-index-value="6">
+                <div>
+                  <h2 class="text-base font-semibold leading-7 text-gray-900">分析结果</h2>
+                  <p class="mt-1 text-sm leading-6 text-gray-600">汪汪给出的 5W1H 分析结果。</p>
+                </div>
+
+                <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:col-span-2">
+                  <div class="col-span-full">
+                    <p data-five-whys-target="stepDescription" class="mt-3 text-sm leading-6 text-gray-600"></p>
                   </div>
                 </div>
               </div>
             </div>
 
             <div class="mt-6 flex items-center justify-end gap-x-6">
-              <button type="button" class="text-sm font-semibold leading-6 text-gray-900">上一步</button>
-              <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">下一步</button>
+              <button type="button" data-action="five-whys#previous" data-five-whys-target="previousButton" class="text-sm font-semibold leading-6 text-gray-900">上一步</button>
+              <button type="button" data-action="five-whys#next" data-five-whys-target="nextButton" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">下一步</button>
             </div>
           </form>
         </div>
