--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -3,6 +3,8 @@
 
   <main class="-mt-32">
     <div class="mx-auto max-w-7xl px-4 pb-12 sm:px-6 lg:px-8">
+      <%= render "layouts/career_menu" %>
+
       <ul role="list" class="divide-y divide-gray-100 overflow-hidden bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl">
         <% @resumes.each do |resume| %>
           <li class="relative flex justify-between gap-x-6 px-4 py-5 hover:bg-gray-50 sm:px-6">
