--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -3,8 +3,11 @@
 
   <main class="-mt-32">
     <div class="mx-auto max-w-7xl px-4 pb-12 sm:px-6 lg:px-8">
+      <%= render "layouts/career_menu" %>
       <div class="rounded-lg bg-white px-5 py-6 shadow sm:px-6">
-        <!-- Your content -->
+        <div class="my-4 flex md:ml-4 md:mt-0">
+          <a href="<%= resumes_path %>" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm ml-auto mr-6">我的简历</a>
+        </div>
         <%= render "navigation_form", current_step: @current_step %>
       </div>
     </div>
