--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -3,6 +3,8 @@
 
   <main class="-mt-32">
     <div class="mx-auto max-w-7xl px-4 pb-12 sm:px-6 lg:px-8">
+      <%= render "layouts/career_menu" %>
+      
       <div class="rounded-lg bg-white px-5 py-6 shadow sm:px-6">
         <!-- Your content -->
         <%= render "navigation_form", current_step: @current_step, resume: @resume %>
