feat(interview): implement form

--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -16,7 +16,7 @@
             <div class="grid grid-cols-1 gap-x-8 gap-y-8 pt-10 md:grid-cols-3">
               <div class="px-4 sm:px-0">
                 <h2 class="text-base font-semibold leading-7 text-gray-900">简历文件</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600">提供简历让汪汪更懂你</p>
+                <p class="mt-1 text-sm leading-6 text-gray-600">提供简历让汪汪更懂你！如果已经通过汪汪生成过简历则不用再重新上传简历，可以通过“定制简历”-“准备面试”进入当前页面。</p>
               </div>
 
               <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2">
