feat(challenges): implement menus

--- a/app/views/chat/challenges/_side_project.html.erb
+++ b/app/views/chat/challenges/_side_project.html.erb
@@ -1,6 +1,94 @@
 <div class="border-b border-gray-900/10 pb-12" data-controller="challenges">
-  <h2 class="text-base font-semibold leading-7 text-gray-900" data-challenges-target="scene">副业</h2>
-  <p class="mt-1 text-sm leading-6 text-gray-600">汪呜～妈妈在做副业的过程中遇到了什么困难？</p>
+  <h2 class="text-base font-semibold leading-7 text-gray-900" data-challenges-target="scene">小红书账号</h2>
+  <p class="mt-1 text-sm leading-6 text-gray-600">汪呜～希望能够帮运用产品知识帮助妈妈成功运营一个小红书账号！</p>
+
+  <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="客户细分（Customer Segments）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >谁是账号的目标受众？他们的特点是什么？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="价值主张（Value Propositions）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >账号会提供哪些独特的价值或内容？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="渠道（Channels）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >计划通过哪些渠道推广小红书账号？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="客户关系（Customer Relationships）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >如何与粉丝建立和维护关系？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="收入来源（Revenue Streams）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >账号如何盈利？是否有多个收入来源？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="关键资源（Key Resources）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >经营账号需要哪些关键资源？如内容创作、摄影设备等。</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="关键活动（Key Activities）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >内容创作、市场分析和用户互动管理等如何执行？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="关键合作伙伴（Key Partnerships）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >需要哪些合作伙伴来成功经营账号？</button>
+    </div>
+    <div class="sm:col-span-3">
+      <button
+        data-challenges-target="challenge"
+        data-action="challenges#submitChallenge"
+        data-value="成本结构（Cost Structure）"
+        type="button"
+        class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100"
+      >经营小红书账号的主要成本是什么？</button>
+    </div>
+  </div>
+</div>
+<div class="border-b border-gray-900/10 pb-12" data-controller="challenges">
+  <h2 class="text-base font-semibold leading-7 text-gray-900" data-challenges-target="scene">副业挑战</h2>
+  <p class="mt-1 text-sm leading-6 text-gray-600">汪呜～妈妈在做副业的过程中遇到了什么挑战？</p>
 
   <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
     <div class="sm:col-span-2">
