feat(*): adjust pages' layout

--- a/app/views/homepage/_header.html.erb
+++ b/app/views/homepage/_header.html.erb
@@ -16,6 +16,7 @@
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
       <a href="<%= switch_view_path %>" class="text-sm font-semibold leading-6 text-gray-900">日常工作</a>
+      <a href="<%= challenges_path %>" class="text-sm font-semibold leading-6 text-gray-900">综合能力</a>
       <a href="<%= new_resume_path %>" class="text-sm font-semibold leading-6 text-gray-900">职业发展</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
@@ -58,6 +59,7 @@
         <div class="-my-6 divide-y divide-gray-500/10">
           <div class="space-y-2 py-6">
             <a href="<%= switch_view_path %>" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">日常工作</a>
+            <a href="<%= challenges_path %>" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">综合能力</a>
             <a href="<%= new_resume_path %>" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">职业发展</a>
           </div>
           <div class="py-6">
