fix(homepage): fix testimonial

--- a/app/views/homepage/_testimonial.html.erb
+++ b/app/views/homepage/_testimonial.html.erb
@@ -12,7 +12,7 @@
 <!--      <img class="h-12 w-auto" src="https://tailwindui.com/img/logos/workcation-logo-white.svg" alt="">-->
       <figure>
         <blockquote class="mt-6 text-lg font-semibold text-white sm:text-xl sm:leading-8">
-          <p>“我今天确认 PRD 内容时被老板批评，它有很好地给我提供思路，而且旺旺很温柔，我的心情也被治愈了！”</p>
+          <p>“我今天确认 PRD 内容时被老板批评，它有很好地给我提供思路，而且汪汪很温柔，我的心情也被治愈了！”</p>
         </blockquote>
         <figcaption class="mt-6 text-base text-white">
           <div class="font-semibold">曾曾</div>
