chore(homepage): using images hosted on the CDN

--- a/app/views/homepage/_hero.html.erb
+++ b/app/views/homepage/_hero.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="mt-16 flow-root sm:mt-24">
         <div class="-m-2 rounded-xl bg-gray-900/5 p-2 ring-1 ring-inset ring-gray-900/10 lg:-m-4 lg:rounded-2xl lg:p-4">
-          <%= image_tag 'app-screenshot.png', width: "2432", height: "1442", class: "rounded-md shadow-2xl ring-1 ring-gray-900/10", alt: 'App screenshot' %>
+          <img src="https://files.pmwangwang.com/web%2Fapp-screenshot.png" class="rounded-md shadow-2xl ring-1 ring-gray-900/10" alt="App screenshot" height="1442" width="2432" >
         </div>
       </div>
     </div>
