--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -4,7 +4,7 @@
 
   <main class="isolate">
     <!-- Hero section -->
-    <%= render "hero" %>>
+    <%= render "hero" %>
 
     <!-- Logo cloud -->
     <%#= render "logo" %>
