--- a/app/views/homepage/_testimonial.html.erb
+++ b/app/views/homepage/_testimonial.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-auto mt-32 max-w-7xl sm:mt-56 sm:px-6 lg:px-8 swiper" data-controller="carousel" data-carousel-target="container">
   <div class="swiper-wrapper">
     <div class="relative overflow-hidden bg-gray-900 px-6 py-20 shadow-xl sm:rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20 swiper-slide">
-      <%= image_tag 'count-chris-hQNFPZK8F80-unsplash.jpg', class: 'absolute inset-0 h-full w-full object-cover brightness-150 saturate-0', alt: '' %>
+      <img src="https://files.pmwangwang.com/web%2Fcount-chris-hQNFPZK8F80-unsplash.jpg" class="absolute inset-0 h-full w-full object-cover brightness-150 saturate-0" alt="">
       <div class="absolute inset-0 bg-gray-900/90 mix-blend-multiply"></div>
       <div class="absolute -left-80 -top-56 transform-gpu blur-3xl" aria-hidden="true">
         <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-r from-[#ff4694] to-[#776fff] opacity-[0.45]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="relative overflow-hidden bg-gray-900 px-6 py-20 shadow-xl sm:rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20 swiper-slide">
-      <%= image_tag 'mimi-thian-lp1AKIUV3yo-unsplash.jpg', class: 'absolute inset-0 h-full w-full object-cover brightness-150 saturate-0', alt: '' %>
+      <img src="https://files.pmwangwang.com/web%2Fmimi-thian-lp1AKIUV3yo-unsplash.jpg" class="absolute inset-0 h-full w-full object-cover brightness-150 saturate-0" alt="">
       <div class="absolute inset-0 bg-gray-900/90 mix-blend-multiply"></div>
       <div class="absolute -left-80 -top-56 transform-gpu blur-3xl" aria-hidden="true">
         <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-r from-[#ff4694] to-[#776fff] opacity-[0.45]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
