feat(*): add UserInterview model

--- a/app/views/chat/user_interview_questions_analysis.html.erb
+++ b/app/views/chat/user_interview_questions_analysis.html.erb
@@ -22,8 +22,8 @@
                   <tr>
                     <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">主题</th>
                     <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">采访对象</th>
-                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">日期</th>
-                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Status</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">创建日期</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">状态</th>
                     <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
                       <span class="sr-only">编辑</span>
                     </th>
@@ -35,10 +35,10 @@
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">曾曾</td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">2024-05-03</td>
                     <td class="whitespace-nowrap px-3 py-5 text-sm text-gray-500">
-                      <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Active</span>
+                      <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">成功</span>
                     </td>
                     <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-                      <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit<span class="sr-only">, Lindsay Walton</span></a>
+                      <a href="#" class="text-indigo-600 hover:text-indigo-900">查看</a>
                     </td>
                   </tr>
 
